--- a/index.html
+++ b/index.html
@@ -260,6 +260,29 @@ in stochastic ice environments.
       </div>
       <div class="url">https://tc.copernicus.org/articles/16/1563/2022/</div>
     </div>
+
+    <div class="bibliography-item">
+      <div class="citation">
+        <a href="https://www.sciencedirect.com/science/article/abs/pii/S0021999121002576" target="_blank">Journal of Computational Physics, ScienceDirect</a>.
+      </div>
+      <div class="url">https://www.sciencedirect.com/science/article/abs/pii/S0021999121002576</div>
+    </div>
+
+    <div class="bibliography-item">
+      <div class="citation">
+        Humpert, M. (2011). 
+        <a href="https://www.thearcticinstitute.org/future-northern-sea-route-golden-waterway-niche/" target="_blank">The Future of the Northern Sea Route - A "Golden Waterway" or a Niche Trade Route</a>. 
+        The Arctic Institute.
+      </div>
+      <div class="url">https://www.thearcticinstitute.org/future-northern-sea-route-golden-waterway-niche/</div>
+    </div>
+
+    <div class="bibliography-item">
+      <div class="citation">
+        <a href="https://www.nature.com/articles/s41467-025-64437-4" target="_blank">Nature Communications, 2025</a>.
+      </div>
+      <div class="url">https://www.nature.com/articles/s41467-025-64437-4</div>
+    </div>
   </div>
 </div>
 
