Adding repo link

--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
 </head>
 <body>
 
-<h2>Autonomous Ship Navigation in Ice-Covered Waters</h2>
+<h2>Autonomous Ship Navigation in Ice-Covered Waters Demo</h2>
 <p>
 Diffusion Model Predictive Control for safe and efficient navigation
-in stochastic ice environments.
+in stochastic ice environments See full repo for implementation details: <a href="https://github.com/GabrielSasseville01/AUTO-IceNav">https://github.com/GabrielSasseville01/AUTO-IceNav</a>.
 </p>
 
 <div class="video-container">
