Ridge density map + google earth

--- a/index.html
+++ b/index.html
@@ -183,6 +183,18 @@ in stochastic ice environments See full repo for implementation details: <a href
   <h3>Analysis Plots</h3>
   <div class="plots-container">
     <div class="plot-placeholder">
+      <div class="plot-title">Google Earth View</div>
+      <div class="plot-description">Satellite view of the Arctic region showing the ice floe region</div>
+      <img src="google_earth_view.png" alt="Google Earth View">
+    </div>
+    
+    <div class="plot-placeholder">
+      <div class="plot-title">Ridge Density Map</div>
+      <div class="plot-description">Ridge detection and density analysis of ice floes</div>
+      <img src="ridge_density_map.png" alt="Ridge Density Map">
+    </div>
+    
+    <div class="plot-placeholder">
       <div class="plot-title">Simulation Overview</div>
       <div class="plot-description">Overall simulation visualization</div>
       <img src="sim.png" alt="Simulation Overview">
