Changing ridge map size

--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
     }
     .video-container {
       display: flex;
-      gap: 20px;
+      flex-direction: column;
+      gap: 30px;
       margin-top: 20px;
-      justify-content: center;
-      flex-wrap: wrap;
+      max-width: 100%;
     }
     .video-wrapper {
-      flex: 1;
-      min-width: 300px;
-      max-width: 50%;
+      width: 100%;
+      max-width: 100%;
     }
     video {
       width: 100%;
