--- a/index.html
+++ b/index.html
@@ -152,8 +152,13 @@
 
 <h2>Autonomous Ship Navigation in Ice-Covered Waters Demo</h2>
 <p>
-Diffusion Model Predictive Control for safe and efficient navigation
-in stochastic ice environments See full repo for implementation details: <a href="https://github.com/GabrielSasseville01/AUTO-IceNav">https://github.com/GabrielSasseville01/AUTO-IceNav</a>.
+This demonstration showcases Diffusion Model Predictive Control (DMPC) for safe and efficient navigation in stochastic ice environments. Our approach leverages real-world data to create an accurate simulation environment. We utilize real satellite imagery data to generate the ice map, which provides a realistic representation of ice floe distributions in the Arctic region. Additionally, we employ satellite imagery to detect ice ridges and generate a real ice ridge density map, enabling precise modeling of ice structure and navigation hazards. The simulation also incorporates real ocean current data to accurately model the dynamic marine environment. Together, these real-world data sources create a comprehensive and realistic testing environment for autonomous navigation algorithms in ice-covered waters.
+</p>
+<p>
+<strong>Authors:</strong> Diego Calanzone, Gabriel Sasseville, Akash Karthikeyan
+</p>
+<p>
+See full repo for implementation details: <a href="https://github.com/GabrielSasseville01/AUTO-IceNav">https://github.com/GabrielSasseville01/AUTO-IceNav</a>.
 </p>
 
 <div class="video-container">
